# NLP

./: .gitignore
baseline/paper/: main.tex
baseline/source_simplification/: .gitignore  GPU_REQUIREMENTS.md  Makefile  README.md  download_data.py  download_data.sh  pyproject.toml  requirements.txt  start_vllm_server_as_process.py
baseline/source_simplification/annotations/: annotations_Ann1_convfinqa_final.xlsx  annotations_Ann1_finqa_final.xlsx  annotations_Ann2_convfinqa_final.xlsx  annotations_Ann2_finqa_final.xlsx  annotations_Ann3_tatqa_final.xlsx  annotations_Ann4_tatqa_final.xlsx
baseline/source_simplification/conf/: defaults.yaml
baseline/source_simplification/conf/dataset/: all.yaml  convfinqa.yaml  finqa.yaml  finqa_de.yaml  finqa_finetuned.yaml  finqa_tool.yaml  tatqa.yaml  vaqa.yaml
baseline/source_simplification/conf/mlflow/: finqa.yaml
baseline/source_simplification/conf/model/: gemma9b.yaml  llama_3_1.yaml  llama_3_3.yaml  llama_small.yaml  phi35mini.yaml  qwq.yaml
baseline/source_simplification/conf/rag/: base.yaml  hybrid.yaml  hyde.yaml  known_context.yaml  no_context.yaml  reranker.yaml  self_rag.yaml  summarization.yaml  summarization_context.yaml
baseline/source_simplification/conf/vector_db/: chroma.yaml
baseline/source_simplification/src/g4k/: __init__.py  file_manager.py  utils.py
baseline/source_simplification/src/g4k/datasets/: upload_dataset.py
baseline/source_simplification/src/g4k/datasets/base/: dataset_enum.py  dataset_interface.py
baseline/source_simplification/src/g4k/datasets/convfinqa/: convfinqa_qa.py
baseline/source_simplification/src/g4k/datasets/dax/: dax_reports.py  dax_to_hf.py  download_dax.py
baseline/source_simplification/src/g4k/datasets/finqa/: create_constituents.ipynb  finqa_parser.py  finqa_qa.py  finqa_reformat.py  postprocessing.py
baseline/source_simplification/src/g4k/datasets/tatqa/: tatdqa_qa.py
baseline/source_simplification/src/g4k/datasets/vqa/: vaq_qa.py
baseline/source_simplification/src/g4k/evaluation/: benchmark_retrieval.py  config.py  customs.py  evaluation.py  execution.py  factory_helper.py
baseline/source_simplification/src/g4k/internal/: abstractions.py  rag_methods.py
baseline/source_simplification/src/g4k/prompts/sys_prompts/: finqa.yaml  finqa_generate_rag_qa.txt  finqa_new.yaml  no_context.yaml  tatqa.yaml  tatqa_generate_rag_qa.txt  vaqa.yaml
baseline/source_simplification/src/g4k/prompts/templates/: gemma_context.j2  llama3_finqa.j2  phi_context.j2
baseline/source_simplification/src/tests/: test_dummy.py  test_finqa_parser.py
eda/: EDA_REPORT_CONSOLIDATED.md  ENTITY_SIGNAL_EDA_REPORT.md  eda_abbreviations.py  eda_analysis.py  eda_output.txt  eda_supplementary.py  eda_supplementary_output.txt  entity_signal_eda_output.txt  gsr_entity_signal_eda.py
ours/: CLAUDE.md
ours/proposal/: contr_improvements.md  critical_analysis.md  draft_idea.md  entity_architecture_research.md  entity_aware_improvements.md  entity_linking_improvement.md  idea.tex  main.tex  new_idea_overall.md  overall_idea.md  overall_idea_old.md  problem.md  render_mermaid.py
ours/proposal/architecture/: error_render.txt  fig1_framework.html
ours/source/: GSR_CACL_DATAFLOW_REPORT.md  Makefile  README.md  architecture.md  beauty_architecture.md  pyproject.toml  run_hybrid_eval.sh
ours/source/conf/: config.yaml
ours/source/conf/dataset/: gsr_convfinqa.yaml  gsr_finqa.yaml  gsr_tatqa.yaml
ours/source/conf/model/: gsr_default.yaml
ours/source/conf/rag/: README.md
ours/source/data/: README.md  download_t2ragbench.py
ours/source/data/t2-ragbench/: manifest.json
ours/source/data/t2-ragbench/ConvFinQA/: dataset_dict.json
ours/source/data/t2-ragbench/ConvFinQA/turn_0/: dataset_info.json  state.json
ours/source/data/t2-ragbench/FinQA/dev/: dataset_info.json  state.json
ours/source/data/t2-ragbench/FinQA/test/: state.json
ours/source/data/t2-ragbench/FinQA/train/: state.json
ours/source/data/t2-ragbench/TAT-DQA/dev/: state.json
ours/source/data/t2-ragbench/TAT-DQA/test/: dataset_info.json  state.json
ours/source/data/t2-ragbench/TAT-DQA/train/: state.json
ours/source/src/: __init__.py
ours/source/src/gsr_cacl/: __init__.py  benchmark_gsr.py  benchmark_sota.py  evaluate.py  evaluate_comparison.py  template_coverage_analysis.py  train.py
ours/source/src/gsr_cacl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ours/source/src/gsr_cacl/core/: __init__.py
ours/source/src/gsr_cacl/datasets/: __init__.py  gsr_document.py  local_data.py  wrappers.py
ours/source/src/gsr_cacl/encoders/: __init__.py  entity_encoder.py  gat_encoder.py  gat_layer.py  numeric_encoder.py  positional.py  text_encoder.py
ours/source/src/gsr_cacl/kg/: __init__.py  builder.py  data_structures.py  parser.py
ours/source/src/gsr_cacl/methods/: __init__.py  gsr_retrieval.py
ours/source/src/gsr_cacl/negative_sampler/: __init__.py  chap.py
ours/source/src/gsr_cacl/scoring/: __init__.py  constraint_score.py  joint_scorer.py
ours/source/src/gsr_cacl/support/: __init__.py  bm25.py
ours/source/src/gsr_cacl/templates/: __init__.py  data_structures.py  library.py  matching.py
ours/source/src/gsr_cacl/tools/: __init__.py  hybrid_eval.py
ours/source/src/gsr_cacl/training/: __init__.py  data.py  entity_supcon_loss.py  losses.py  trainer.py
research_paper/: S1532046421003129.html
